cppcheck_report.txt
include/hx711_multi_awaiter.pio.h:8:0: error: No pair for character ('). Can't process file. File is either invalid or unicode, which is currently not supported. [preprocessorErrorDirective]
   36 |     mov isr, 0                          ; clear the ISR; we don't care about the contents
^
